--- a/views/about.html
+++ b/views/about.html
@@ -14,6 +14,7 @@
     <p>
         HiddenLake: <br>
         - Based on p2p network. <br>
+        - Implemented f2f network. <br>
         - Implemented onion routing. <br>
         - Implemented end-to-end encryption. <br>
         - Symmetric algorithm = AES256-CBC. <br>
