--- a/views/base.html
+++ b/views/base.html
@@ -15,6 +15,7 @@
             <header>
                 <div id="head_title" class="wrapper">
                     <p>
+                        <a id="mode" href="#">{{ if .ModeF2F }}( F2F ){{ else }}( P2P ){{ end }}</a>
                         Hidden Lake Network
                         {{ if .Auth }}
                             [ {{ .Login }} ]
@@ -49,4 +50,21 @@
             </div>
         </div>
     </body>
+    <script>
+        $(document).ready(function(){  
+            $('#mode').click(function(){  
+                $.ajax({  
+                    type: "POST",  
+                    url: "/api/mode",
+                    cache: false,
+                    success: function(obj){
+                        if (obj.Exists) {
+                            location.reload();
+                        }
+                    }  
+                });
+                return false;
+            });  
+        });  
+    </script> 
 </html>
