--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,13 @@
     <br>
     <div class="content">
     <p>
-        hello, world
+        Updates: <br>
+        - Version 0.6: F2F connection; <br>
+        - Version 0.5: onion routing; <br>
+        - Version 0.4: interface extension; <br>
+        - Version 0.3: GUI; <br>
+        - Version 0.2: end-to-end encryption; <br>
+        - Version 0.1: P2P network; <br>
     </p>
     </div>
 {{ end }}
