--- a/views/network_archive_X.html
+++ b/views/network_archive_X.html
@@ -16,7 +16,7 @@
 	{{ if not .Files }}
 		<p>Nothing</p>
 	{{ else }}
-		<form method="POST" action="/archive/">
+		<form method="POST" action="/archive">
 			<select name="filename">
 				{{ range .Files }}
 				<option value="{{ . }}">
