--- a/views/network_chat.html
+++ b/views/network_chat.html
@@ -16,9 +16,16 @@
             <p>
             {{ if .Connections }}
                 <b>Connections = </b> 
-                {{ range .Connections }}
-                    <br>
-                    <a href="/network/chat/{{ .User }}">{{ .Login }} [{{ if .Status }} Connected {{ else }} NotConnected {{ end }}]</a>
+                {{ if .ModeF2F}}
+                    {{ range .Connections }}
+                        <br>
+                        <a href="/network/chat/{{ .User }}">{{ .User }}</a>
+                    {{ end }}
+                {{ else }}
+                    {{ range .Connections }}
+                        <br>
+                        <a href="/network/chat/{{ .User }}">{{ .Login }} [{{ if .Status }} Connected {{ else }} NotConnected {{ end }}]</a>
+                    {{ end }}
                 {{ end }}
             {{ else }}
                 None connections
@@ -26,9 +33,11 @@
             </p>
         </div>
         <div class="right_div">
-            <input type="submit" name="delete_message" value="Delete messages">
-            <textarea id="plain" readonly>{{ range .Messages }}{{ . }}{{ end }}</textarea>
             <form method="POST" accept="/network/chat/">
+                <input type="submit" name="delete_message" value="Delete messages">
+            </form>
+            <form method="POST" accept="/network/chat/">
+                <textarea id="plain" readonly>{{ range .Messages }}{{ . }}{{ end }}</textarea>
                 <input class="input_size" type="text" name="text" placeholder="Send message...">
                 <input autofocus type="submit" name="send_message" value="Send message">
             </form>
