--- a/views/network_chat_X.html
+++ b/views/network_chat_X.html
@@ -20,11 +20,18 @@
             <br><p>|> <b><a href="/network/chat/">Global chat</a></b></p><br>
             <p>
             {{ if .Connections }}
-                <b>Connections = </b> 
-                {{ range .Connections }}
-                    <br>
-                    <a href="/network/chat/{{ .User }}">{{ .Login }} [{{ if .Status }} Connected {{ else }} NotConnected {{ end }}]</a>
-                {{ end }}
+                <b>Connections = </b>
+                {{ if .ModeF2F }}
+                    {{ range .Connections }}
+                        <br>
+                        <a href="/network/chat/{{ .User }}">{{ .User }}</a>
+                    {{ end }}
+                {{ else }}
+                    {{ range .Connections }}
+                        <br>
+                        <a href="/network/chat/{{ .User }}">{{ .Login }} [{{ if .Status }} Connected {{ else }} NotConnected {{ end }}]</a>
+                    {{ end }}
+                {{ end }} 
             {{ else }}
                 None connections
             {{ end }}
@@ -32,7 +39,7 @@
         </div>
         <div class="right_div">
             {{ if .TempConnect }}
-                <form method="POST" action="/network/chat/{{ .TempConnect}}">
+                <form method="POST" accept="/network/chat/">
                     <b>
                         <a href="/network/profile/{{ .TempConnect }}">Profile</a> | 
                         <a href="/network/chat/{{ .TempConnect }}">Chat</a> | 
@@ -40,8 +47,10 @@
                         <a href="/network/archive/{{ .TempConnect }}">Archive</a> | 
                         <input type="submit" name="delete_message" value="Delete messages">
                     </b>
+                </form>
+                <form method="POST" action="/network/chat/{{ .TempConnect}}">
                     <textarea id="plain" readonly>{{ range .Messages }}{{ . }}{{ end }}</textarea> <br>
-                    {{ if .Status }}
+                    {{ if (or .Status .ModeF2F) }}
                         <input class="input_size" type="text" name="text" placeholder="Message...">
                         <input autofocus type="submit" name="send_message" value="Send message">
                     {{ end }}
