--- a/views/network_profile_X.html
+++ b/views/network_profile_X.html
@@ -21,16 +21,22 @@
 				<a href="/network/archive/{{ .UserHash }}">Archive</a> |
 			</b>
 			<form method="POST" action="/network/">
-				<input type="hidden" name="addr" value="{{ .UserHash }}">
-				<input type="submit" name="delete" value="Disconnect">
+				<input type="hidden" name="name" value="{{ .UserHash }}">
+				<input type="submit" name="disconnect" value="Disconnect">
 			</form>
 		</div>
 		<p>
-			<b>Login</b> = {{ .UserLogin }} <br>
-			<b>Hash</b> = {{ .UserHash }} <br>
-			<b>Status</b> = {{ if .Status }} Connected {{ else }} NotConnected {{ end }} <br>
-			<b>PublicKey</b> = <br>
-			{{ .PublicKey }} <br>
+			{{ if .ModeF2F }}
+				<b>Hash</b> = {{ .UserHash }} <br>
+				<b>Address</b> = {{ .Address }} <br>
+				<b>Status</b> = {{ if .Status }} Connected {{ else }} NotConnected {{ end }} <br>
+			{{ else }}
+				<b>Login</b> = {{ .UserLogin }} <br>
+				<b>Hash</b> = {{ .UserHash }} <br>
+				<b>Status</b> = {{ if .Status }} Connected {{ else }} NotConnected {{ end }} <br>
+				<b>PublicKey</b> = <br>
+				{{ .PublicKey }} <br>
+			{{ end }}
 		</p>
 	</div>	
 {{ end }}
