--- a/views/about.html
+++ b/views/about.html
@@ -3,14 +3,14 @@
 {{ end }}
 
 {{ define "content" }}
-    <div class="div_bread wrapper">
-        <p class="bread"> /
+    <div class="wrapper">
+        <p class="block_left"> /
             <i>About</i>
         </p>
     </div>
     <hr>
     <br>
-    <div class="content">
+    <div class="content block_left">
     <p>
         HiddenLake: <br>
         - Based on p2p network. <br>
