--- a/views/base.html
+++ b/views/base.html
@@ -7,6 +7,7 @@
         </title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="/static/css/style.css">
+        <link rel="stylesheet" type="text/css" href="/static/css/media.css">
         <script type="text/javascript" src="/static/js/jquery.js"></script>
     </head>
     <body>
@@ -34,16 +35,15 @@
                 </div>
             </header>
             <main>
-                <div id="main_content" class="block_left">
+                <div id="main_content">
                 {{ block "content" . }}
                 {{ end }}
                 </div>
             </main>
-            <hr>
             <footer>
                 <div class="wrapper">
                     <p class="block_left"> 
-                        [ HiddenLake ] 
+                        [ HiddenLake v0.6.1 ]
                     </p>
                 </div>
             </footer>
