--- a/views/index.html
+++ b/views/index.html
@@ -3,22 +3,44 @@
 {{ end }}
 
 {{ define "content" }}
-    <div class="div_bread wrapper">
-        <p class="bread"> /
+    <div class="wrapper">
+        <p class="block_left"> /
             <i>Home</i>
         </p>
     </div>
     <hr>
     <br>
-    <div class="content">
-    <p>
-        Updates: <br>
-        - Version 0.6: F2F connection; <br>
-        - Version 0.5: onion routing; <br>
-        - Version 0.4: interface extension; <br>
-        - Version 0.3: GUI; <br>
-        - Version 0.2: end-to-end encryption; <br>
-        - Version 0.1: P2P network; <br>
-    </p>
+    <div class="content block_left">
+        <p>
+            <b><i>Version 0.6:</i></b><br>
+            1. F2F connection; <br>
+            2. Authorization from database; <br>
+            <br>
+            <b><i>Version 0.5:</i></b><br>
+            1. Onion routing; <br>
+            2. Routing mode: static/dynamic; <br>
+            <br>
+            <b><i>Version 0.4:</i></b><br> 
+            1. Interface extension; <br>
+            2. Added login and password; <br>
+            3. Password - the importance of the first order; <br>
+            <br>
+            <b><i>Version 0.3:</i></b><br>
+            1. GUI; <br>
+            2. Emails; <br>
+            3. Database; <br>
+            <br>
+            <b><i>Version 0.2:</i></b><br>
+            1. DHT; <br>
+            2. Argument Initialization; <br>
+            <br>
+            <b><i>Version 0.1:</i></b><br>
+            1. CLI; <br>
+            2. Archive; <br>
+            3. P2P network; <br>
+            4. End-to-end encryption; <br>
+            5. Global and Local chat; <br>
+            <br>
+        </p>
     </div>
 {{ end }}
