--- a/views/network_chat_X.html
+++ b/views/network_chat_X.html
@@ -3,8 +3,8 @@
 {{ end }}
 
 {{ define "content" }}
-    <div class="div_bread wrapper">
-        <p class="bread"> /
+    <div class="wrapper">
+        <p class="block_left"> /
             <a href="/network/">Network</a> /
             <a href="/network/chat/">Chat</a> /
             {{ if .TempConnect }}
@@ -15,7 +15,7 @@
         </p>
     </div>
     <hr>
-    <div class="content">
+    <div class="content block_left">
         <div class="left_div">
             <br><p>|> <b><a href="/network/chat/">Global chat</a></b></p><br>
             <p>
