--- a/views/network_email.html
+++ b/views/network_email.html
@@ -3,15 +3,15 @@
 {{ end }}
 
 {{ define "content" }}
-	<div class="div_bread wrapper">
-		<p class="bread"> /
+	<div class="wrapper">
+		<p class="block_left"> /
 			<a href="/network/">Network</a> /
 			<i>Email</i>
 		</p>
 	</div>
 	<hr>
 	<br>
-	<div class="content">
+	<div class="content block_left">
 	<b>
 		<a href="/network/email/write">Write Email</a> |
 		<a href="/network/email/read/">Read Email</a> 
