--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,8 +21,21 @@ a {
     text-decoration: none;
 }
 
+.login_input {
+    width: 15em;
+}
+
+#login_button {
+    width: 15.6em;
+}
+
 .input_connect {
     width: 16em;
+}
+
+.content {
+    height: 27em;
+    overflow: auto;
 }
 
 #glitch {
@@ -55,19 +68,13 @@ a {
     text-align: left;
 }
 
-.content {
-    overflow: auto;
-}
-
 #main_content::before {
     position: absolute;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
-    /*background: black;*/
     background-repeat: no-repeat;
-    /*opacity: 0.5;*/
     content: "";
     z-index: -1;
 }
@@ -77,7 +84,7 @@ a {
     height: 100%;
     margin-left: auto;
     margin-right: auto;
-    width: 60em;
+    width: 100%;
 }
 
 #square::before {
@@ -88,7 +95,7 @@ a {
     right: 0;
     background: black;
     background-repeat: no-repeat;
-    opacity: 0.4;
+    opacity: 0.55;
     content: "";
     z-index: -1;
 }
@@ -98,7 +105,7 @@ a {
     height: 100%;
     margin-left: auto;
     margin-right: auto;
-    width: 60em;
+    width: 100%;
 }
 
 .wrapper::before {
@@ -109,7 +116,7 @@ a {
     right: 0;
     background: black;
     background-repeat: no-repeat;
-    opacity: 0.3;
+    opacity: 0.4;
     content: "";
     z-index: -1;
 }
@@ -168,10 +175,45 @@ input {
     opacity: 0.6;
 }
 
+.input_size {
+    width: 29em;
+}
+
+#container_message {
+    width: 35em;
+}
+
+#message_send, #button_send {
+    display: inline-block;
+}
+
+#default_connects {
+    width: 22em;
+    height: 6em;
+}
+
+#save_settings {
+    width: 21.2em;
+}
+
+.settings_div {
+    width: 28em;
+    height: 10em;
+    display: inline-block;
+}
+
+#settings_left {
+    float: left;
+}
+
+#setting_right {
+    float: right;
+}
+
 textarea {
+    font-size: 14px;
     opacity: 0.6;
     resize: none;
-    width: 99.7%;
     height: 10em;
 }
 
@@ -197,14 +239,12 @@ main, footer {
 }
 
 .left_div {
-    margin-left: 2em;
     float: left;
 }
 
 .right_div {
     width: 35em;
     float: right;
-    margin-right: 2em;
 }
 
 .container > * {
@@ -225,70 +265,10 @@ a {
     color: lightgray;
 }
 
+.bread {
+    width: 100%;
+}
+
 .bread > i {
     color: gray;
-}
-
-@media (max-width: 60em){
-    #main_content, #square, .wrapper , .block_left{
-        width: 50em;
-    }
-
-    #navigate > * {
-        word-spacing: 30px;
-    }
-
-    .button {
-        padding: 10px 30px 10px 30px;
-    }
-}
-
-@media (max-width: 50em){
-    #main_content, #square, .wrapper , .block_left{
-        width: 40em;
-    }
-
-    #navigate > * {
-        word-spacing: 20px;
-    }
-
-    .button {
-        padding: 8px 20px 8px 20px;
-    }
-}
-
-@media (max-width: 40em){
-    #main_content, #square, .wrapper , .block_left{
-        width: 30em;
-    }
-
-    #navigate > * {
-        word-spacing: 10px;
-    }
-
-    .button {
-        padding: 8px 15px 8px 15px;
-    }
-
-    #head_title > p {
-        font-size: 18px;
-    }
-}
-
-@media (max-width: 30em){
-    #main_content, #square, .wrapper, .block_left {
-        width: 20em;
-    }
-
-    #navigate > * {
-        word-spacing: 0px;
-    }
-
-    .button {
-        padding: 6px 8px 6px 8px;
-    }
-
-    #head_title > p {
-        font-size: 16px;
-    }
 }
