--- a/views/archive.html
+++ b/views/archive.html
@@ -3,14 +3,14 @@
 {{ end }}
 
 {{ define "content" }}
-	<div class="div_bread wrapper">
-		<p class="bread"> /
+	<div class="wrapper">
+		<p class="block_left"> /
 			<i>Archive</i>
 		</p>
 	</div>
 	<hr>
 	<br>
-	<div class="content">
+	<div class="content block_left">
 	{{ if not .Files }}
 		<p>Nothing</p>
 	{{ else }}
