--- a/views/network.html
+++ b/views/network.html
@@ -3,14 +3,14 @@
 {{ end }}
 
 {{ define "content" }}
-	<div class="div_bread wrapper">
-		<p class="bread"> /
+	<div class="wrapper">
+		<p class="block_left"> /
 			<i>Network</i>
 		</p>
 	</div>
 	<hr>
 	<br>
-	<div class="content">
+	<div class="content block_left">
 		<b>
 			<a href="/network/profile/">Profiles</a> | 
 			<a href="/network/chat/">Chat</a> |
