--- a/views/network_archive.html
+++ b/views/network_archive.html
@@ -3,15 +3,15 @@
 {{ end }}
 
 {{ define "content" }}
-	<div class="div_bread wrapper">
-		<p class="bread"> /
+	<div class="wrapper">
+		<p class="block_left"> /
 			<a href="/network/">Network</a> /
 			<i>Archive</i>
 		</p>
 	</div>
 	<hr>
 	<br>
-	<div class="content">
+	<div class="content block_left">
 	<p>
 		{{ if .Connections }}
 			<b>Connections</b> = 
