--- a/views/network_chat.html
+++ b/views/network_chat.html
@@ -3,14 +3,14 @@
 {{ end }}
 
 {{ define "content" }}
-    <div class="div_bread wrapper">
-        <p class="bread"> /
+    <div class="wrapper">
+        <p class="block_left"> /
             <a href="/network/">Network</a> /
             <i>Chat</i>
         </p>
     </div>
     <hr>
-    <div class="content">
+    <div class="content block_left">
         <div class="left_div">
             <br><p>|> <b><a href="/network/chat/">Global chat</a></b></p><br>
             <p>
@@ -34,12 +34,18 @@
         </div>
         <div class="right_div">
             <form method="POST" accept="/network/chat/">
-                <input type="submit" name="delete_message" value="Delete messages">
+                <input class="delete_input" type="submit" name="delete_message" value="Delete messages">
             </form>
             <form method="POST" accept="/network/chat/">
                 <textarea id="plain" readonly>{{ range .Messages }}{{ . }}{{ end }}</textarea>
-                <input class="input_size" type="text" name="text" placeholder="Send message...">
-                <input autofocus type="submit" name="send_message" value="Send message">
+                <div id="container_message">
+                    <div id="message_send">
+                        <input class="input_size" type="text" name="text" placeholder="Send message...">
+                    </div>
+                    <div id="button_send">
+                        <input class="button_input" autofocus type="submit" name="send_message" value="Send message">
+                    </div>
+                </div>
             </form>
             <script>  
                 function show() {  
