--- a/views/network_email_read.html
+++ b/views/network_email_read.html
@@ -3,8 +3,8 @@
 {{ end }}
 
 {{ define "content" }}
-    <div class="div_bread wrapper">
-        <p class="bread"> /
+    <div class="wrapper">
+        <p class="block_left"> /
             <a href="/network/">Network</a> /
             <a href="/network/email/">Email</a> /
             <i>Read</i>
@@ -12,7 +12,7 @@
     </div>
     <hr>
     <br>
-    <div class="content">
+    <div class="content block_left">
     {{ if .Emails }}
         <table border="1" cellpadding="5">
             <tr>
