--- a/views/network_email_write.html
+++ b/views/network_email_write.html
@@ -3,8 +3,8 @@
 {{ end }}
 
 {{ define "content" }}
-    <div class="div_bread wrapper">
-        <p class="bread"> /
+    <div class="wrapper">
+        <p class="block_left"> /
             <a href="/network/">Network</a> /
             <a href="/network/email/">Email</a> /
             <i>Write</i>
@@ -12,24 +12,24 @@
     </div>
     <hr>
     <br>
-    <div class="content">
-    {{ if eq .Error 1 }}
-        <p> Message is not sent! </p>
-    {{ else if eq .Error -1 }}
-        <p> Message is sent! </p>
-    {{ end }}
-    <form method="POST" action="/network/email/write">
-        <select name="node">
-            <option value="none">Usernode</option>
-            {{ range .Connections }}
-            <option value="{{ . }}">
-                {{ . }}
-            </option>
-            {{ end }}
-        </select> <br>
-        <input type="text" name="title" placeholder="Title"> <br>
-        <textarea rows="8" cols="30" name="body" placeholder="Message"></textarea><br>
-        <input type="submit" name="send" value="Send">
-    </form>
+    <div class="content block_left">
+        {{ if eq .Error 1 }}
+            <p> Message is not sent! </p>
+        {{ else if eq .Error -1 }}
+            <p> Message is sent! </p>
+        {{ end }}
+        <form method="POST" action="/network/email/write">
+            <select name="node">
+                <option value="none">Usernode</option>
+                {{ range .Connections }}
+                <option value="{{ . }}">
+                    {{ . }}
+                </option>
+                {{ end }}
+            </select> <br>
+            <input type="text" name="title" placeholder="Title"> <br>
+            <textarea rows="8" cols="30" name="body" placeholder="Message"></textarea><br>
+            <input type="submit" name="send" value="Send">
+        </form>
     </div>
 {{ end }}
