--- a/views/page404.html
+++ b/views/page404.html
@@ -3,15 +3,15 @@
 {{ end }}
 
 {{ define "content" }}
-	<div class="div_bread wrapper">
-		<p class="bread"> /
+	<div class="wrapper">
+		<p class="block_left"> /
 			<a href="/">Home</a> /
 			<i>Page 404</i>
 		</p>
 	</div>
 	<hr>
 	<br>
-	<div class="content">
+	<div class="content block_left">
 	<p>Ooops <b>404</b> page ...</p>
 	</div>
 {{ end }}
