--- a/views/index.html
+++ b/views/index.html
@@ -24,6 +24,7 @@
             1. Interface extension; <br>
             2. Added login and password; <br>
             3. Password - the importance of the first order; <br>
+            4. Multiple overwriting and deletion file; <br>
             <br>
             <b><i>Version 0.3:</i></b><br>
             1. GUI; <br>
