--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,10 @@
     <br>
     <div class="content block_left">
         <p>
+            <b><i>Version 0.6.5->0.7:</i></b><br>
+            2. Rewritten functions P2P connections; <br>
+            3. Individual asymmetric keys for P2P and F2F modes;<br>
+            <br>
             <b><i>Version 0.6:</i></b><br>
             1. F2F connection; <br>
             2. Authorization from database; <br>
