--- a/views/index.html
+++ b/views/index.html
@@ -12,9 +12,11 @@
     <br>
     <div class="content block_left">
         <p>
-            <b><i>Version 0.6.5->0.7:</i></b><br>
-            2. Rewritten functions P2P connections; <br>
-            3. Individual asymmetric keys for P2P and F2F modes;<br>
+            <b><i>Version 0.7:</i></b><br>
+            1. Network is now hybrid;<br>
+            2. Client-Server connection to P2P node;<br>
+            3. Rewritten functions P2P connections; <br>
+            4. Individual asymmetric keys for P2P and F2F modes;<br>
             <br>
             <b><i>Version 0.6:</i></b><br>
             1. F2F connection; <br>
