--- a/views/network_chat.html
+++ b/views/network_chat.html
@@ -11,62 +11,33 @@
     </div>
     <hr>
     <div class="content block_left">
-        <div class="left_div">
-            <br><p>|> <b><a href="/network/chat/">Global chat</a></b></p><br>
-            <p>
+        <br>
+        <form method="POST" accept="/network/chat/">
+            <select id="selected_connection" onchange="change_connection();">
+            <option>Connections</option>
+            <option>Global</option>
             {{ if .Connections }}
-                <b>Connections = </b> 
-                {{ if .ModeF2F}}
-                    {{ range .Connections }}
-                        <br>
-                        <a href="/network/chat/{{ .User }}">{{ .User }}</a>
-                    {{ end }}
-                {{ else }}
-                    {{ range .Connections }}
-                        <br>
-                        <a href="/network/chat/{{ .User }}">{{ .Login }} [{{ if .Status }} Connected {{ else }} NotConnected {{ end }}]</a>
-                    {{ end }}
+                {{ range .Connections }}
+                    <br>
+                    <option><a href="/network/chat/{{ . }}">{{ . }}</a></option>
                 {{ end }}
-            {{ else }}
-                None connections
             {{ end }}
-            </p>
-        </div>
-        <div class="right_div">
-            <form method="POST" accept="/network/chat/">
-                <input class="delete_input" type="submit" name="delete_message" value="Delete messages">
-            </form>
-            <form method="POST" accept="/network/chat/">
-                <textarea id="plain" readonly>{{ range .Messages }}{{ . }}{{ end }}</textarea>
-                <div id="container_message">
-                    <div id="message_send">
-                        <input class="input_size" type="text" name="text" placeholder="Send message...">
-                    </div>
-                    <div id="button_send">
-                        <input class="button_input" autofocus type="submit" name="send_message" value="Send message">
-                    </div>
+        </select>
+            <input class="delete_input" type="submit" name="delete_message" value="Delete messages">
+        </form>
+        <form method="POST" accept="/network/chat/">
+            <textarea id="plain" readonly>{{ range .Messages }}{{ . }}{{ end }}</textarea>
+            <div id="container_message">
+                <div id="message_send">
+                    <input class="input_size" type="text" name="text" placeholder="Send message...">
                 </div>
-            </form>
-            <script>  
-                function show() {  
-                    $.ajax({  
-                        type: "POST",
-                        url: "/api/chat/global/update",  
-                        cache: false,  
-                        success: function(obj) {
-                            console.log(obj);
-                            if (obj.Exists) {
-                                $("#plain").html($("#plain").val() + obj.Body);  
-                            }
-                        },
-                    }).done(function(obj){
-                        show();
-                    });  
-                }  
-                $(document).ready(function(){  
-                    show();
-                });  
-            </script> 
-        </div>
+                <br>
+                <div id="button_send">
+                    <input class="button_input" autofocus type="submit" name="send_message" value="Send message">
+                </div>
+            </div>
+        </form>
+        <script type="text/javascript" src="/static/js/ajax/network_chat.js"></script>
+        <script type="text/javascript" src="/static/js/ajax/change_connection.js"></script>
     </div>
 {{ end }}
