--- a/views/home.html
+++ b/views/home.html
@@ -13,6 +13,26 @@
 {{ define "home_page" }}
 <div class="col-12 col-md-8 mx-auto" v-if="opened=='home'">
     <h2 class="text-center">Updates</h2><br>
+    <div v-if="message.curr">
+        <div v-if="message.desc=='success'" class="alert alert-success" role="alert">
+           ${message.curr}
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div v-if="message.desc=='danger'" class="alert alert-danger" role="alert">
+           ${message.curr}
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div v-if="message.desc=='warning'" class="alert alert-warning" role="alert">
+           ${message.curr}
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+    </div>
     <div class="accordion " id="accordionExample">
         <div class="card bg-dark">
             <div class="card-header" id="headingOne">
