--- a/views/login.html
+++ b/views/login.html
@@ -6,8 +6,25 @@
                 <div class="text-center col-12">
                     <h2>Authorization</h2>
                 </div>
-                <div v-if="message" class="text-center col-12">
-                    <p class="lead">${message}</p>
+                <div v-if="message.curr" class="text-center col-10 mx-auto">
+                    <div v-if="message.desc=='success'" class="alert alert-success" role="alert">
+                       ${message.curr}
+                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div v-if="message.desc=='danger'" class="alert alert-danger" role="alert">
+                       ${message.curr}
+                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div v-if="message.desc=='warning'" class="alert alert-warning" role="alert">
+                       ${message.curr}
+                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
                 </div>
                 <div class="text-center col-10 mx-auto">
                     <form id="feedbackForm" class="text-center">
