--- a/views/network.html
+++ b/views/network.html
@@ -1,7 +1,24 @@
 {{ define "network_page" }}
 <div class="mx-auto my-2" v-if="opened=='network'">
-    <div v-if="message" class="text-center col-12">
-        <p class="lead">${message}</p>
+    <div v-if="message.curr" class="card bg-dark">
+        <div v-if="message.desc=='success'" class="alert alert-success" role="alert">
+           ${message.curr}
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div v-if="message.desc=='danger'" class="alert alert-danger" role="alert">
+           ${message.curr}
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div v-if="message.desc=='warning'" class="alert alert-warning" role="alert">
+           ${message.curr}
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
     </div>
     <div class="card bg-dark chat-room">
         <div class="card-body">
