--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,42 @@
 </head>
 <body id="page-top" class="bg-dark">
     <main>
-        {{ template "navbar_part" }}
+        <nav class="navbar navbar-expand-lg navbar-dark py-3 bg-dark fixed-top" id="mainNav">
+            <div class="container">
+                <router-link to="/" class="navbar-brand js-scroll-trigger" exact><h4>HiddenLake</h4></router-link>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul v-if="authdata.token" class="navbar-nav">
+                        <li class="nav-item" @click="network('')">
+                            <router-link to="/network" data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-link js-scroll-trigger"><h5>Network</h5></router-link>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <router-link to="/" data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-link js-scroll-trigger"><h5>Home</h5></router-link>
+                        </li>
+                        <li class="nav-item">
+                            <router-link to="/about" data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-link js-scroll-trigger"><h5>About</h5></router-link>
+                        </li>
+                        <li v-if="!authdata.token" class="nav-item">
+                            <router-link to="/signup" data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-link js-scroll-trigger"><h5>Signup</h5></router-link>
+                        </li>
+                        <li v-if="!authdata.token" class="nav-item">
+                            <router-link to="/login" data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-link js-scroll-trigger"><h5>Login</h5></router-link>
+                        </li>
+
+                        <li v-if="authdata.token" @click="account()" class="nav-item">
+                            <router-link to="/account" data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-link js-scroll-trigger"><h5>Account</h5></router-link>
+                        </li>
+                        <li v-if="authdata.token" @click="logout()" class="nav-item">
+                            <router-link to="/" data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-link js-scroll-trigger"><h5>Logout</h5></router-link>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
         <br><br><br>
 
         <!-- HOME PAGE -->
@@ -58,8 +93,12 @@
         </div>
 
         <br><br><br>
-        {{ template "footer_part" }}
-
+        <footer class="navbar fixed-bottom py-3 bg-dark">
+            <div class="container">
+                <p class="m-0 text-center text-secondary">Remake by #571</p>
+                <p class="navbar-nav ml-auto text-secondary">Version 1.0.0s</p>
+            </div>
+        </footer>
         <router-view></router-view>
     </main>
 </body>
