--- a/views/account.html
+++ b/views/account.html
@@ -31,16 +31,16 @@ ${conndata.public_key}</pre>
     <div class="form-group row">
         <div class="col-md-6">
             <div v-if="!userdata.private_key">
-                <button v-if="switcher!='private_key'" @click="nulldata(), setswitch('private_key')" type="button" class="btn btn-danger w-100">View Private Key</button>
-                <button v-else @click="setswitch('private_key')" type="button" class="btn btn-danger w-100">View Private Key</button>
+                <button v-if="switcher!='private_key'" @click="nulldata(), setswitch('private_key')" type="button" class="btn btn-secondary w-100">View Private Key</button>
+                <button v-else @click="setswitch('private_key')" type="button" class="btn btn-danger w-100">Action</button>
             </div>
             <div v-else>
                 <button @click="nulldata()" type="button" class="btn btn-success w-100">Close Private Key</button>
             </div>
         </div>
         <div class="col-md-6">
-            <button v-if="switcher!='delete_user'" @click="nulldata(), setswitch('delete_user')" type="button" class="btn btn-danger w-100">Delete User</button>
-            <button v-else @click="setswitch('delete_user')" type="button" class="btn btn-danger w-100">Delete User</button>
+            <button v-if="switcher!='delete_user'" @click="nulldata(), setswitch('delete_user')" type="button" class="btn btn-secondary w-100">Delete User</button>
+            <button v-else @click="setswitch('delete_user')" type="button" class="btn btn-danger w-100">Action</button>
         </div>
     </div>
 
@@ -52,7 +52,7 @@ ${conndata.public_key}</pre>
             <div class="form-group">
                 <input type="password" class="form-control bg-dark text-light" name="name" placeholder="Password" v-model="userdata.password">
             </div>
-            <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" class="btn btn-secondary w-100" @click="viewkey()">View Private Key</button>
+            <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" class="btn btn-success w-100" @click="viewkey()">View Private Key</button>
         </form>
     </div>
 
@@ -64,7 +64,7 @@ ${conndata.public_key}</pre>
             <div class="form-group">
                 <input type="password" class="form-control bg-dark text-light" name="name" placeholder="Password" v-model="userdata.password">
             </div>
-            <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" class="btn btn-secondary w-100" @click="deluser()">Delete User</button>
+            <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" class="btn btn-success w-100" @click="deluser()">Delete User</button>
         </form>
     </div>
 
